
message TtlHashKv {
	
	required bytes hash = 1;
	required bytes k = 2;
	required bytes v = 3;
	required int64 kill_ts = 4;
};
